# BayesFolio

./: .gitignore  .pr_agent.toml  20251201_ewma2_estimates.csv  20251201_weights.csv  20260131_etf_features.csv  20260131_etf_returns.csv  20260131_macro_features.csv  AGENTS.md  LICENSE  README.md  gp_botorch_testing.py  gp_config.html  gp_testing.py  guided_portfolio_app.py  kernels.py  mlflow_testing.py  my_etf_portfolio_characteristics.qmd  predicting_multiclass.qmd  predicting_with_etf_level.qmd  pyproject.toml  pyrightconfig.json  streamlit_app.py
.github/: copilot-instructions.md  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  research.yml
.github/workflows/: ci.yml  pr-agent.yml  sync-labels.yml
bayesfolio/: __init__.py  asset_prices.py  market_fundamentals.py  notes.qmd  utils.py
bayesfolio/contracts/: __init__.py  base.py
bayesfolio/core/: __init__.py  settings.py  types.py
bayesfolio/engine/: __init__.py  guided_portfolio_chat.py  mvp_historical_chat.py  pipeline.py
bayesfolio/features/: __init__.py
bayesfolio/io/: __init__.py  agent_tool_executor.py  artifact_store.py  artifacts.py  backends.py  fingerprints.py  mlflow_logger.py  parquet_store.py  report_artifacts.py
bayesfolio/mlflow/: 20251125_for_dec_portfolio.py  20251128_for_dec_portfolio.py  20251205_testing.py  20251225_forjan_portfolio.py  20260110_exponential_decay.py  20260131_fed_portfolio.py  20260131_fed_portfolio_newkernel.py  20260228_gameday_predictions.csv  20260228_gp_posterior_scenarios.csv  20260228_macro_features.csv  20260228_weights_hist_vs_gp.csv  20260301_march_portfolio.py  20260301_march_porttolio.py  20260301_march_porttolioFAILED.py  helpers.py
bayesfolio/models/: extra_model_info.py  gp.py  old_gp.py
bayesfolio/notebooks/: 20251031_mtgp_tuning.qmd  20251115_custom_estimates_riskfolio.qmd  20251129_portfolio_creation.py  my_etf_portfolio_characteristics.qmd
bayesfolio/old_portfolios/: 20260101.py  jan_portfolio_weights.csv  jan_predictions_rank3.csv
bayesfolio/optimization/: __init__.py  (+3 more)
docs/: copilot_architecture.md  migration-map-phase1-3.md  package_map.md
marketmaven/: asset_prices.py  backtesting.py  configs.py  evaluate.py  gp_data_prep.py  kernels.py  market_fundamentals.py  mlflow_benchmarking.py  notes.qmd  utils.py
notebooks/: 20260401_portfolio.py  20260501_portfolio.py  planned_gp_workflow_interactive.ipynb
portfolios/: 20251201_portfolio.csv
scratch/: autogluon.py
scripts/: audit_doc_coverage.py  build_returns_dataset.py  check_new_public_docstrings.py  prewarm_mvp_returns_cache.py  run_planned_gp_from_csv.py
(+193 files in other folders)
