[tool.poetry]
name = "marketmaven"
version = "0.1.0"
description = ""
authors = ["ethantenison <tenison.ethan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "^2.0.0"
pandas = "^2.2.2"
yfinance = "^0.2.40"
pybind11 = "^3.0.0"
cvxpy = "^1.7.1"
riskfolio-lib = "^7.0.1"
mosek = "11.0.27"
plotly = "6.3.0"
seaborn = "^0.13.2"
xgboost = "3.0.4"
optuna = "4.5.0"
torch = "^2.8.0"
gpytorch = "1.14"
mlflow = "^3.3.2"
pydantic = "^2.11.7"
botorch = "^0.15.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
